# simd_learning

./: CMakeLists.txt  README.md  build_all.sh
include/: CannyLine.h  MetaLine.h  MyTime.h  Sobel.hpp
src/: CannyLine.cpp  MetaLine.cpp  MyTime.cpp  Sobel.cpp  buffer_2d.cpp  main.cpp
toolchains/: README.md  arm-linux-gnueabihf.toolchain.cmake  build_all.sh
